Improve Decimal64 validity checks
Created a separate check for decimal64 scale, which always matches
fractional digits. The range check is performed on the unscaled value -
i.e. for a similar cost as our uint32/uint64 checks.

JIRA: YANGTOOLS-1634
Change-Id: I098b909b0f952d7b427cda827397c0efdd69dd37
Signed-off-by: Oleksandr Panasiuk <oleksandr.panasiuk@pantheon.tech>
Signed-off-by: lubos-cicut <lubos.cicut@pantheon.tech>
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>